# tennis-app/src/data/openapi/models/MatchProbabilities.ts
@@ -1,0 +1,19 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type MatchProbabilities = {
+    /**
+     * Event Average Service Points Won
+     */
+    eventSPW?: number;
+    /**
+     * Event Average Return Points Won
+     */
+    eventRPW?: number;
+    /**
+     * Match Probability
+     */
+    matchProb?: number;
+};
+
